  configurations.
- The new DefaultConfigurationBuilder class as a hierarchical alternative to
  ConfigurationFactory that allows for more configuration options.
- Support for configuration listeners that are notified about modifications
  on a configuration object.

A complete list of changes can be found below.

CHANGES
=======

- DataConfiguration.getDateArray() used to ignore the format argument.
  This was fixed. Fixes CONFIGURATION-220.
- The dependency to servletapi was updated from version 2.3 to version 2.4, but
  version 2.3 will still work. Fixes CONFIGURATION-217.
- A new class PropertiesConfigurationLayout was introduced whose task is to
  preserve the structure (e.g. comments, blanc lines) of a file loaded by
  PropertiesConfiguration. Each PropertiesConfiguration object is now associated
  with such a layout object. A saved properties file will look very similar to
  its original. Fixes CONFIGURATION-104.
- clone() methods have been added to BaseConfiguration,
  AbstractFileConfiguration, MapConfiguration, CompositeConfiguration, and
  CombinedConfiguration. So the most important Configuration implementations now
  support cloning. To ConfigurationUtils an utility method cloneConfiguration()
  was added that allows to conveniently clone a configuration.
  Fixes CONFIGURATION-145.
- If a configuration file was to be loaded from classpath, the constructor of
  AbstractFileConfiguration dropped the file's path. The path is now taken into
  account. Fixes CONFIGURATION-216.
- The getter methods for numeric data types in AbstractConfiguration now support
  conversions between different Number types, e.g. you can now call getLong(key)
  when key points to an Integer value. Fixes CONFIGURATION-214.
- The new class DefaultConfigurationBuilder was added as an alternative to
  ConfigurationFactory. It provides some more features and creates a
  CombinedConfiguration object.
- The new class CombinedConfiguration was added as a hierarchical alternative to